# praxis-vision-report

./: .gitignore  FLYWHEEL_STATE.md  README.md  pyproject.toml
src/praxis_vision_report/: __init__.py
src/praxis_vision_report/pipelines/: __init__.py  gtc_session_writeup.yaml
src/praxis_vision_report/tasks/audit_html_report/: __init__.py  manifest.yaml  models.py  service.py  task.py
src/praxis_vision_report/tasks/compile_vision_report/: __init__.py  manifest.yaml  models.py  service.py  task.py
src/praxis_vision_report/tasks/playwright_screenshot/: __init__.py  manifest.yaml  models.py  service.py  task.py
src/praxis_vision_report/tasks/refine_html_report/: __init__.py  manifest.yaml  models.py  service.py  task.py
src/praxis_vision_report/tasks/vision_analyze_batch/: __init__.py  manifest.yaml  models.py  service.py  task.py
tests/: conftest.py
tests/integration/: test_compile_vision_report_integration.py  test_vision_analyze_batch_integration.py
tests/unit/: test_audit_html_report_models.py  test_audit_html_report_service.py  test_audit_html_report_task.py  test_compile_vision_report_models.py  test_compile_vision_report_service.py  test_compile_vision_report_task.py  test_playwright_screenshot_models.py  test_playwright_screenshot_service.py  test_playwright_screenshot_task.py  test_refine_html_report_models.py  test_refine_html_report_service.py  test_refine_html_report_task.py  test_vision_analyze_batch_models.py  test_vision_analyze_batch_service.py  test_vision_analyze_batch_task.py
